--- a/src/components/Dial/Dial.css
+++ b/src/components/Dial/Dial.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
     width: 100vw;
 }
 
@@ -45,4 +46,17 @@
 
 .dial__pointer--very-low {
     fill: #74C050;
+}
+
+.counter {
+    font: normal 2em/1 sans-serif;
+    color: red;
+    width: 100%;
+    text-align: center;
+}
+
+.counter__number {
+    width: 2.5em;
+    display: inline-block;
+    text-align: right;
 }
