--- a/src/components/Dial/Dial.css
+++ b/src/components/Dial/Dial.css
@@ -21,11 +21,16 @@
     height: 100%;
     left: 0;
 }
+
 .dial__pointer {
     fill: #74C050;
     fill: #eeeeee;
     position: relative;
     transition: all 1000ms ease-in-out;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
 }
 
 .dial__pointer--very-high {
@@ -49,14 +54,39 @@
 }
 
 .counter {
-    font: normal 2em/1 sans-serif;
-    color: red;
+    font: normal 2em/1 'Fira Mono', monospace;
     width: 100%;
+    flex-direction: column;
     text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 0;
+    height: 70%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+.counter p {
+    background: rgba(255, 255, 255, 0.75);
+    border-radius: 0.2em;
+    padding: 0 1em;
+    opacity: 1;
+    transition: opacity 300ms ease-out;
+    margin: 0;
+}
+
+.counter--inactive p {
+    opacity: 0;
 }
 
 .counter__number {
-    width: 2.5em;
+    width: 2em;
     display: inline-block;
     text-align: right;
+}
+
+.counter__time {
+    font-size: 0.6em;
 }
