--- a/src/index.pug
+++ b/src/index.pug
@@ -42,4 +42,5 @@ html(lang="en")
             }
     body
         div#app
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Mono&text=1234567890gCOperkWhtoapm")
 
