--- a/src/index.pug
+++ b/src/index.pug
@@ -42,5 +42,5 @@ html(lang="en")
             }
     body
         div#app
-        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Mono&text=1234567890gCOperkWhtoapmdy")
+        link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400&text=1234567890gCOperkWhtoapmdy")
 
